src/objects/review_item__c.object
<CustomObject>
    <description>A list of all technology assets that are part of an initial technology due dilligence process.</description>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Due Diligence Checklist Number</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Review Items</relationshipLabel>
        <relationshipName>Review_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assets_Needed__c</fullName>
        <description>This is the list of assets need for the review item. If left blank, the users can provide any documentation they deem fit that answers the review item.</description>
        <inlineHelpText>This is the list of assets need for the review item. If left blank, the users can provide any documentation they deem fit that answers the review item.</inlineHelpText>
        <label>Assets Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Category Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Count__c</fullName>
        <label>File Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this review item is complete, please check this box to indicate you are finished with it and it&apos;s ready to be reviewed.</inlineHelpText>
        <label>Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade_Description__c</fullName>
        <description>Why was that grade given?</description>
        <label>Grade Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Grade_Number__c</fullName>
        <description>This field converts the picklist of Grade to a number value for use in calculations.</description>
        <formula>VALUE(TEXT( Item_Grading__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Locked__c</fullName>
        <description>Used by the custom Assessment Review Items Lightning component to determine whether the record should be read-only for the current user.</description>
        <formula>$Profile.Name = &quot;Community: Portfolio Company&quot; &amp;&amp; NOT(Assessment__r.Is_Current_User_a_Reviewer__c) &amp;&amp; (ISPICKVAL(Review_Item_Status__c, &quot;In File&quot;) || ISPICKVAL(Review_Item_Status__c, &quot;In Process&quot;) || ISPICKVAL(Review_Item_Status__c, &quot;Complete&quot;))</formula>
        <inlineHelpText>Is the Review Item record read-only for the current user due to Review Item Status?</inlineHelpText>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Category_Description__c</fullName>
        <label>Item Category Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Category__c</fullName>
        <defaultValue>&quot;other&quot;</defaultValue>
        <label>Item Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Comments__c</fullName>
        <description>A large area where someone can describe the answer to the question (item description) that is asked.</description>
        <label>Item Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Grading__c</fullName>
        <description>Asset grade: 1 is the worst and 3 is the best.</description>
        <label>Item Grading</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <color>#CC0000</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#F3D904</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#009900</color>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Item Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Date the documentation was reviewed by the fund tech team.</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Item_Name__c</fullName>
        <label>Review Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Item_Status__c</fullName>
        <label>Review Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>In File</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer_Comments__c</fullName>
        <label>Reviewer Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>Assessment_Meta_Data__c</referenceTo>
        <relationshipLabel>Review Items</relationshipLabel>
        <relationshipName>Review_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks whether or not this is an urgent item.</description>
        <inlineHelpText>Marks whether or not this is an urgent item.</inlineHelpText>
        <label>Urgent</label>
        <type>Checkbox</type>
    </fields>
    <label>Review Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Review_Items</fullName>
        <columns>NAME</columns>
        <columns>Item_Category__c</columns>
        <columns>Review_Item_Name__c</columns>
        <columns>Review_Item_Status__c</columns>
        <columns>Urgent__c</columns>
        <columns>Assets_Needed__c</columns>
        <columns>Item_Description__c</columns>
        <columns>Item_Comments__c</columns>
        <columns>File_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Review_Item_Status__c</field>
            <operation>equals</operation>
            <value>,Pending</value>
        </filters>
        <label>Open Review Items</label>
    </listViews>
    <nameField>
        <displayFormat>RI-{0000000}</displayFormat>
        <label>Review Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>